objects/Suppliers__x.object
<CustomObject>
    <description>Suppliers</description>
    <externalDataSource>Odata_Sample</externalDataSource>
    <externalName>Suppliers</externalName>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address</description>
        <externalDeveloperName>Address</externalDeveloperName>
        <label>Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <externalDeveloperName>City</externalDeveloperName>
        <label>City</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <description>CompanyName</description>
        <externalDeveloperName>CompanyName</externalDeveloperName>
        <label>CompanyName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <description>ContactName</description>
        <externalDeveloperName>ContactName</externalDeveloperName>
        <label>ContactName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactTitle__c</fullName>
        <description>ContactTitle</description>
        <externalDeveloperName>ContactTitle</externalDeveloperName>
        <label>ContactTitle</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <externalDeveloperName>Country</externalDeveloperName>
        <label>Country</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax</description>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Fax</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePage__c</fullName>
        <description>HomePage</description>
        <externalDeveloperName>HomePage</externalDeveloperName>
        <label>HomePage</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone</description>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Phone</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>PostalCode</description>
        <externalDeveloperName>PostalCode</externalDeveloperName>
        <label>PostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region</description>
        <externalDeveloperName>Region</externalDeveloperName>
        <label>Region</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierID__c</fullName>
        <description>SupplierID</description>
        <externalDeveloperName>SupplierID</externalDeveloperName>
        <label>SupplierID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Suppliers</label>
    <pluralLabel>Suppliers</pluralLabel>
</CustomObject>